added path to logo

--- a/7-bank-project/solution/index.html
+++ b/7-bank-project/solution/index.html
@@ -17,7 +17,7 @@
       <div class="login-container">
         <div class="login-title text-center">
           <span class="hide-xs">Squirrel</span>
-          <img class="login-logo" src="logo.svg" alt="Squirrel Banking Logo">
+          <img class="login-logo" src="C:\Users\aayaa\OneDrive\Desktop\webs\Web-Dev-For-Beginners\7-bank-project\solution\logo.svg" alt="Squirrel Banking Logo">
           <span class="hide-xs">Banking</span>
         </div>
         <div class="login-content">
